# claudes_toolbox

./: .env.example  .gitignore  README.md  __init__.py  __version__.py  configs.py  configs.yaml.example  install_server.sh  logger.py  pyproject.toml  requirements.txt  run_linux.config  run_wsl.config  server.py  start_server.sh
docs/: __init__.md  __version__.md  configs.md  index.md  logger.md  server.md
docs/tests/: __init__.md
docs/utils/: __init__.md  mcp_print.md
resources/: _dynamic_resources.py  uri-schemes-1.csv
server_utils/: __init__.py  cli_tools.py  install_tool_dependencies_to_shared_venv.py
server_utils/_run_tool/: __init__.py  _run_tool.py  test.json
server_utils/common_/: lazy_import.py
server_utils/server_/: get_functions_tools_from_files.py  get_functions_tools_from_files_stubs.md
subservers/: database.py  json_response_debug.py  markdown_tools.py  server_debug.py  test_database.py
tests/: _test_utils.py  context_note_voice_reminders_testing.md  custom_errors.py  test_app.py  test_update_readme_when_settings_are_changed.py
tests/_templates/: pydantic_base_model_factory_template.py.jinja2  pydantic_base_model_instantiation_tests.py.jinja2
tests/cli/: tests_todo_finder.py
tests/for_tools_/: test_infer_type_dictionary_logic.py  test_json_to_pydantic.py
tests/functions/: _extract_function_stubs_output_example.md  _test_extract_function_stubs.md  make_a_master_todo_file.md  test_extract_function_stubs.py  test_find_orphaned_files.py  test_generate_pytest_test_stubs.py  test_identify_mocks.py  test_infer_type_dictionary_logic.py  test_json_to_pydantic.py  test_json_to_pydantic_model.py  test_list_tools_in_functions_dir.py  (+4 more)
tools/: __init__.py
utils/: __init__.py  _deep_merge_two_dictionaries.py  cli_tools.py  get_cli_tools_from_files.py  install_tool_dependencies_to_shared_venv.py  mcp_print.py  merge_configs_yaml.py  merge_envs.py  run_cli_tool.py  turn_argparse_help_into_docstring.py
wip/: install_server.bat  run_windows.config  server_as_class.py
(+141 files in other folders)
